Revert "Publish Issue with image alignment on numbered [sc-134999]"
This reverts commit a557fca08e4a00aa7b834839241db36e9b0e6181.

--- a/packages/portal-style/src/modules/_content-style.scss
+++ b/packages/portal-style/src/modules/_content-style.scss
@@ -823,7 +823,6 @@
 }
 .dp-po-post-content ol:not(.footnotes-list) > li {
   display: flex;
-  flex-wrap: wrap;
   counter-increment: counter;
 }
 .dp-po-post-content ol:not(.footnotes-list) > div,
@@ -834,7 +833,6 @@
   display: inline-block;
   margin: 6px 0;
   max-width: calc(100% - 35px);
-  width: calc(100% - 35px);
   vertical-align: middle;
 }
 .dp-po-post-content ol:not(.footnotes-list) p + p {
